--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,5 +1,11 @@
 <div class="alert alert-gd-1">
-	<h2 class="gd-primary">How does it work?</h2>
+	<h2 class="gd-primary">How do I install the userscript?</h2>
+	<div class="faq-content">
+		Check out the detailed instructions on this page: <a routerLink="/profile/script" style="text-decoration: underline;">Userscript installation instructions</a>
+	</div>
+</div>
+<div class="alert alert-gd-1">
+	<h2 class="gd-primary">How can I collect enemy intelligence?</h2>
 	<div class="faq-content">
 		<br/>
 		<div class="row">
@@ -38,7 +44,7 @@
 	<h2 class="gd-primary">Is it allowed?</h2>
 	<div class="faq-content">
 		Our script does not automate any gameplay elements, and therefore is in compliance with the overall rules.
-		<br/>Official approval is <strong>pending since 2018</strong>. Unfortunately, Grepolis is currently not evaluating new scripts. However, using our script will not get you banned. <a href="https://en.forum.grepolis.com/index.php?threads/grepodata-enemy-city-indexer-pending-approval.62245/#post-1057206" target="_blank">You can find more info about this here.</a>
+		<br/>Official approval is still pending. However, using our script will not get you banned. <a href="https://en.forum.grepolis.com/index.php?threads/grepodata-enemy-city-indexer-pending-approval.62245/#post-1057206" target="_blank">You can find more info about this here.</a>
 	</div>
 </div>
 <div class="alert alert-gd-1">
@@ -55,14 +61,6 @@
 		Your index key is only available to you and anyone you choose to share the link with. If you suspect your index has been leaked you can easily request a new key to once again secure the index by using the red button in the top right corner of your index homepage.
 		<br/><br/>
 		We actively keep track of bots and crawlers to prevent unauthorized users to gain access to your index. Please keep in mind that you will be temporarily banned if you try to find unknown index keys.
-	</div>
-</div>
-<div class="alert alert-gd-1">
-	<h2 class="gd-primary">I forgot my index key</h2>
-	<div class="faq-content">
-		Click <a class="a-link-dialog" (click)="showForgotDialog()">here</a> to receive an email containing a list of all indexes you created.
-		<br/>
-		Only the owner of the index can request this email. If you are not the owner, ask them for the key or create a new index for yourself.
 	</div>
 </div>
 <div class="alert alert-gd-1">
