--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -6,10 +6,10 @@
         <a [matMenuTriggerFor]="sdprofile" class="">{{ username }}<i class="ti-angle-down font-12 m-l-5"></i></a>
     </div>
     <mat-menu #sdprofile="matMenu" class="mymegamenu">
-        <button mat-menu-item><mat-icon>settings</mat-icon> Settings</button>
-        <button mat-menu-item><mat-icon>account_box</mat-icon> Profile</button>
-        <button mat-menu-item><mat-icon>notifications_off</mat-icon> Disable notifications</button>
-        <button mat-menu-item><mat-icon>exit_to_app</mat-icon> Sign Out</button>
+        <!--<button mat-menu-item><mat-icon>settings</mat-icon> Settings</button>-->
+        <!--<button mat-menu-item><mat-icon>account_box</mat-icon> Profile</button>-->
+        <!--<button mat-menu-item><mat-icon>notifications_off</mat-icon> Disable notifications</button>-->
+        <button mat-menu-item (click)="logout()"><mat-icon>exit_to_app</mat-icon> Sign Out</button>
     </mat-menu>
 </div>
 <mat-nav-list appAccordion>
@@ -18,9 +18,10 @@
         *ngFor="let menuItem of loadMenuItems()"
         routerLinkActive="selected"
         group="{{ menuItem.state }}"
-        [ngClass]="menuItem.action"
+        [ngClass]="activePath.indexOf(menuItem?.active)>=0 ? 'custom-selected' : ''"
         (click)="handleMenuAction(menuItem.action)"
     >
+	    <!--[ngClass]=" ? 'selected' : ''"-->
         <a
             class=""
             appAccordionAnchor
