--- a/src/assets/styles/sidebar.scss
+++ b/src/assets/styles/sidebar.scss
@@ -211,7 +211,7 @@ use profile section
 }
 
 .mat-sidenav-content {
-  margin: 20px 45px 0 285px !important;
+  //margin: 20px 45px 0 285px !important;
 }
 
 .mat-nav-list .mat-list-item {
