--- a/src/app/auth/profile/components/intel/intel.component.html
+++ b/src/app/auth/profile/components/intel/intel.component.html
@@ -1,97 +1,132 @@
-<app-paper
-  icon="visibility"
-  title="My reports"
-  description="This page shows all reports that are indexed by you. By default, new intel is shared with any indexes you are participating in.">
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-xs-12">
 
-				<mat-progress-bar style="margin-top: -10px;" *ngIf="loading || paging" mode="indeterminate"></mat-progress-bar>
+<mat-card class="index-card">
+	<h2 class="gd-secondary">Search in your intel</h2>
+	<app-index-search></app-index-search>
+</mat-card>
 
-				<div *ngIf="!loading">
-
-					<mat-paginator *ngIf="from > 0 || num_results > 15" [length]="num_results"
-					               [pageSize]="size"
-					               [pageSizeOptions]="[1, 10, 20, 30, 50, 100]"
-					               (page)="paginatorEvent($event)"
-					               [disabled]="paging"
-					               style="display: flex; justify-content: left;">
-					</mat-paginator>
-
-						<div  [ngClass]="{'loading-overlay': paging}">
-							<div class="table intel-table" id="table_all">
-								<div class="row_custom header bg-gd-2" >
-									<div class="cell">
-										World
-									</div>
-									<div class="cell">
-										Type
-									</div>
-									<div class="cell">
-										Town
-									</div>
-									<div class="cell">
-										Player
-									</div>
-									<div class="cell">
-										Alliance
-									</div>
-									<div class="cell">
-										Date
-									</div>
-									<div class="cell" style="width: 50%;">
-										Units
-									</div>
-								</div>
-
-								<div class='row_custom' *ngFor="let town of intel" style="height: 40px;">
-									<div class="cell">
-										<div class="bg-flag flag-inline-middle flag-{{town?.world.substring(0, 2)}}"></div>&nbsp;<a routerLink="/points/{{town?.world}}">{{town?.world}}</a>
-									</div>
-									<div class="cell unit-cell-small" matTooltip="{{town.type}}" style="transform: scale(.55); margin-top: -8px;">
-										<img src="../../assets/images/game/towninfo/attack.png" *ngIf="town.type === 'friendly_attack'">
-										<div *ngIf="town.type === 'enemy_attack'" style="-moz-transform: scaleX(-1); -o-transform: scaleX(-1); -webkit-transform: scaleX(-1); transform: scaleX(-1); filter: FlipH; -ms-filter: ;">
-											<img src="../../assets/images/game/towninfo/attack.png">
-										</div>
-										<img src="../../assets/images/game/towninfo/wisdom.png" *ngIf="town.type === 'wisdom'">
-										<img src="../../assets/images/game/towninfo/support.png" *ngIf="town.type === 'support'">
-										<img src="../../assets/images/game/towninfo/conquer.png" *ngIf="town.type === 'attack_on_conquest'">
-										<img src="../../assets/images/game/towninfo/espionage_2.67.png" *ngIf="town.type === 'spy'">
-									</div>
-									<div class="cell">
-										<a routerLink="/indexer/town/{{key}}/{{world}}/{{town?.town_id}}">{{town?.town_name}}</a>
-									</div>
-									<div class="cell">
-										<a routerLink="/indexer/player/{{key}}/{{world}}/{{town?.player_id}}">{{town?.player_name}}</a>
-									</div>
-									<div class="cell">
-										<a routerLink="/indexer/alliance/{{key}}/{{world}}/{{town?.alliance_id}}">{{town?.alliance_name}}</a>
-									</div>
-									<div class="cell">
-										{{town.date | IndexDate}}
-									</div>
-									<div class="cell">
-										<div *ngIf="town?.parsed != true">
-											<span class="gd-error">Sorry, we were unable to parse this report. Developers have been notified.</span>
-										</div>
-										<div style="display: flex;" *ngIf="town?.parsed == true">
-			                <span style="transform: scale(.8); margin-right: 32px;" *ngFor="let unit of town.units | ValuesPipe; let i = index;"
-			                      matTooltip="{{unit.name.replace('_',' ')}}">
-			                  <div class="unit_icon40x40 {{unit.name}}"></div>
-			                  <div class="unit-val" style="margin-right: -40px; top: 0px; background: #9898986e; height: 40px; width: 40px;">
-			                    <div>{{unit.count}}</div>
-			                    <div style="color: #d00; margin-top: -6px;" *ngIf="unit.killed>0">-{{unit.killed}}</div>
-			                  </div>
-			                </span>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-
-				</div>
-			</div>
+<mat-card class="index-card">
+	<h2 class="gd-secondary">Your favourite indexes</h2>
+	<div fxLayout="row wrap">
+		<div fxFlex.gt-sm="33.33" fxFlex.gt-xs="100" fxFlex="100">
+			<a href="#">
+				<mat-card class="bg-primary text-white text-center m-20">
+					<div class="p-10">
+						<h2 class="m-0">5</h2>
+						<small>Indexes</small>
+					</div>
+				</mat-card>
+			</a>
+		</div>
+		<div fxFlex.gt-sm="33.33" fxFlex.gt-xs="100" fxFlex="100">
+			<a href="#">
+				<mat-card class="bg-warning text-white text-center m-20">
+					<div class="p-10">
+						<h2 class="m-0">15</h2>
+						<small>Alliances</small>
+					</div>
+				</mat-card>
+			</a>
+		</div>
+		<div fxFlex.gt-sm="33.33" fxFlex.gt-xs="100" fxFlex="100">
+			<a href="#">
+				<mat-card class="bg-success text-white text-center m-20">
+					<div class="p-10">
+						<h2 class="m-0">5168</h2>
+						<small>Indexed reports</small>
+					</div>
+				</mat-card>
+			</a>
 		</div>
 	</div>
+</mat-card>
 
-</app-paper>
+
+<mat-card class="index-card">
+	<h2 class="gd-secondary">Latest reports indexed by you</h2>
+
+	<mat-progress-bar style="margin-top: -10px;" *ngIf="loading || paging" mode="indeterminate"></mat-progress-bar>
+
+	<div *ngIf="!loading">
+
+		<mat-paginator *ngIf="from > 0 || num_results > 15" [length]="num_results"
+		               [pageSize]="size"
+		               [pageSizeOptions]="[1, 10, 20, 30, 50, 100]"
+		               (page)="paginatorEvent($event)"
+		               [disabled]="paging"
+		               style="display: flex; justify-content: left;">
+		</mat-paginator>
+
+			<div  [ngClass]="{'loading-overlay': paging}">
+				<div class="table intel-table" id="table_all">
+					<div class="row_custom header bg-gd-2" >
+						<div class="cell">
+							World
+						</div>
+						<div class="cell">
+							Type
+						</div>
+						<div class="cell">
+							Town
+						</div>
+						<div class="cell">
+							Player
+						</div>
+						<div class="cell">
+							Alliance
+						</div>
+						<div class="cell">
+							Date
+						</div>
+						<div class="cell" style="width: 50%;">
+							Units
+						</div>
+					</div>
+
+					<div class='row_custom' *ngFor="let town of intel" style="height: 40px;">
+						<div class="cell">
+							<div class="bg-flag flag-inline-middle flag-{{town?.world.substring(0, 2)}}"></div>&nbsp;<a routerLink="/points/{{town?.world}}">{{town?.world}}</a>
+						</div>
+						<div class="cell unit-cell-small" matTooltip="{{town.type}}" style="transform: scale(.55); margin-top: -8px;">
+							<img src="../../assets/images/game/towninfo/attack.png" *ngIf="town.type === 'friendly_attack'">
+							<div *ngIf="town.type === 'enemy_attack'" style="-moz-transform: scaleX(-1); -o-transform: scaleX(-1); -webkit-transform: scaleX(-1); transform: scaleX(-1); filter: FlipH; -ms-filter: ;">
+								<img src="../../assets/images/game/towninfo/attack.png">
+							</div>
+							<img src="../../assets/images/game/towninfo/wisdom.png" *ngIf="town.type === 'wisdom'">
+							<img src="../../assets/images/game/towninfo/support.png" *ngIf="town.type === 'support'">
+							<img src="../../assets/images/game/towninfo/conquer.png" *ngIf="town.type === 'attack_on_conquest'">
+							<img src="../../assets/images/game/towninfo/espionage_2.67.png" *ngIf="town.type === 'spy'">
+						</div>
+						<div class="cell">
+							<a routerLink="/intel/town/{{town?.world}}/{{town?.town_id}}">{{town?.town_name}}</a>
+						</div>
+						<div class="cell">
+							<a routerLink="/intel/player/{{town?.world}}/{{town?.player_id}}">{{town?.player_name}}</a>
+						</div>
+						<div class="cell">
+							<a routerLink="/intel/alliance/{{town?.world}}/{{town?.alliance_id}}">{{town?.alliance_name}}</a>
+						</div>
+						<div class="cell">
+							{{town.date | IndexDate}}
+						</div>
+						<div class="cell">
+							<div *ngIf="town?.parsed != true">
+								<span class="gd-error">Sorry, we were unable to parse this report. Developers have been notified.</span>
+							</div>
+							<div style="display: flex;" *ngIf="town?.parsed == true">
+                <span style="transform: scale(.8); margin-right: 32px;" *ngFor="let unit of town.units | ValuesPipe; let i = index;"
+                      matTooltip="{{unit.name.replace('_',' ')}}">
+                  <div class="unit_icon40x40 {{unit.name}}"></div>
+                  <div class="unit-val" style="margin-right: -40px; top: 0px; background: #9898986e; height: 40px; width: 40px;">
+                    <div>{{unit.count}}</div>
+                    <div style="color: #d00; margin-top: -6px;" *ngIf="unit.killed>0">-{{unit.killed}}</div>
+                  </div>
+                </span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+	</div>
+
+</mat-card>
