--- a/src/app/indexer/alliance/alliance.component.html
+++ b/src/app/indexer/alliance/alliance.component.html
@@ -1,13 +1,29 @@
 <div style="overflow-x: hidden; min-height: 100%;">
 
-	<p class="gd-secondary profile-breadcrumbs">
-		<a class="a-link-dialog" routerLink="/profile/indexes">My indexes</a>
-		<mat-icon>arrow_forward_ios</mat-icon>World <a class="a-link-dialog" routerLink="/points/{{world}}">{{world}}</a>
-		<mat-icon>arrow_forward_ios</mat-icon>Index <a class="a-link-dialog" routerLink="/alliance" [queryParams]="{world: world, id: id}">{{key}}</a>
-		<mat-icon>arrow_forward_ios</mat-icon>Alliance <a class="a-link-dialog" routerLink="/profile/alliance/{{key}}/{{world}}/{{id}}">{{allianceName}}</a>
-	</p>
+	<mat-card class="search-card" *ngIf="!embedded">
+		<app-index-search></app-index-search>
+	</mat-card>
 
-  <div [ngClass]="{'embedded-padding': embedded}">
+	<mat-card [ngClass]="embedded?'embedded-intel-card':'index-card'">
+		<div [ngClass]="{'embedded-padding': embedded}">
+			<div class="card-header bg-gd-1 text-center text-white" style="margin-bottom: 0;" *ngIf="!embedded">
+
+				<h2 style="cursor: pointer; margin: 0;">
+					Showing your combined intel for:&nbsp;
+					<div class="name-circle" (click)="copyBB()">
+						<img style="height: 25px; margin-top: -5px;" src="../../assets/images/ally_ico.png"/>&nbsp;
+						<span class="gd-brown">{{allianceName}}</span>
+					</div>
+				</h2>
+				<h3>
+	        <span class="index-title" *ngIf="world">
+	          World: <div class="bg-flag flag-inline-middle flag-{{world.substr(0,2)}}"></div>&nbsp;<span class='world-title' *ngIf="world"><a class="a-link-dialog gd-secondary" routerLink="/points" [queryParams]="{world: world}">{{worldName}}&nbsp;({{world}})</a></span>
+	        </span>
+					<span class="index-title" *ngIf="!loading">
+	          Stats: <span class='world-title'><a class="a-link-dialog gd-secondary" routerLink="/alliance" [queryParams]="{world: world, id: id}">View alliance statistics</a></span>
+	        </span>
+				</h3>
+			</div>
     <!--<div class="card-header bg-gd-2 text-center" *ngIf="!embedded" style="margin-bottom: 0;">-->
 
       <!--&lt;!&ndash;<div style="position: absolute; top: 10px; max-width: 200px;">&ndash;&gt;-->
@@ -42,23 +58,13 @@
     <!--</div>-->
     <mat-card-content class="decorated-card-content" [ngClass]="{'embedded-padding': embedded}" style="padding: 0 !important;">
 
-      <!--<app-index-search *ngIf="!embedded" [indexKey]="key"></app-index-search>-->
-
-      <div *ngIf="embedded">
-        <h4 class="gd-primary text-center">
-          <span class="index-title">
-            Index: <span class='world-title'><a class="a-link-dialog" style="color: #334254 !important;" routerLink="/indexer/{{key}}">{{key}} <mat-icon style="opacity: 1; vertical-align: bottom;" class="hidden-xs">launch</mat-icon></a></span>
-          </span>
-        </h4>
-      </div>
-
       <div *ngIf="err != ''">
         <br/>
         <br/>
         <div class="alert alert-gd-1 text-center">
-          <h2 class="gd-primary">No intel available</h2>
+          <h2 class="gd-primary">No alliance intel available</h2>
           <h4>
-            Index {{key}} contains no intel for this alliance. Note: Intel about your allies (index owners) is unavailable.
+            You have not yet gained any intel on this alliance. Note: Intel about your allies (index owners) is unavailable.
           </h4>
         </div>
       </div>
@@ -113,7 +119,7 @@
               <br/>
               <br/>
               <div class="alert alert-danger text-center">
-                <h3>This index has not yet received any intel on alliance <strong>{{allianceName}}</strong></h3>
+                <h3>You have not yet gained any intel on alliance <strong>{{allianceName}}</strong></h3>
               </div>
             </div>
           </div>
@@ -123,6 +129,7 @@
 
     </mat-card-content>
   </div>
+	</mat-card>
 
   <div class="row" *ngIf="!noIntel && err=='' && !loading">
     <div class="col-lg-12 text-center">
@@ -134,7 +141,7 @@
 
 <!--sea units-->
 <ng-template #seaunits>
-	<mat-card class="index-card text-center">
+	<mat-card class="index-card text-center sub-card">
 
 		<mat-card-title>
 			<div class="form-group row" style='margin: 0px;'>
@@ -248,7 +255,7 @@
 
 <!--land units-->
 <ng-template #landunits>
-	<mat-card class="index-card text-center">
+	<mat-card class="index-card text-center sub-card">
 
 		<mat-card-title>
 			<div class="form-group row" style='margin: 0px;'>
